<resources>
    <string name="app_name">Hack and Change</string>
    <string name="title_home">Мои подписки</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_flow">Поток по теме</string>
    <string name="flow_idea">Идеи</string>
    <string name="flow_daily">Дейли</string>
    <string name="flow_news">Новости</string>
    <string name="flow_strat">Стратегии</string>
    <string name="title_profile">Профиль</string>
    <string name="title_edit_profile">Редактировать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_location">http://18.133.117.201:5000</string>
    <string name="google_client_id">1013300136810-9be3rihpvo3rpgodci4fhrm4378qgfhg.apps.googleusercontent.com   </string>
    <string name="login_nickname_field">Никнейм</string>
    <string name="login_password_field">Пароль</string>
    <string name="log_in_text">Вход</string>
    <string name="register_button">Регистрация</string>
    <string name="logout_text">Выйти</string>
</resources>